--- a/.eslintrc
+++ b/.eslintrc
@@ -1,32 +1,25 @@
 {
-  "extends": [
-    "eslint:recommended",
-    "plugin:import/errors",
-    "plugin:react/recommended",
-    "plugin:jsx-a11y/recommended"
-  ],
-  "rules": {
-    "react/prop-types": 0,
-    "no-console": 1,
-    "react-hooks/rules-of-hooks": 2,
-    "react-hooks/exhaustive-deps": 1
+  "env": {
+    "browser": true,
+    "es6": true,
+    "jest": true
   },
-  "plugins": ["react", "import", "jsx-a11y", "react-hooks"],
   "parser": "babel-eslint",
   "parserOptions": {
-    "ecmaVersion": 2018,
-    "sourceType": "module",
     "ecmaFeatures": {
-      "jsx": true,
-      "es6": true,
-      "browser": true,
-      "node": true,
-      "jest": true
+      "jsx": true
     },
-    "settings": {
-      "react": {
-        "version": "^17.0.2"
-      }
-    }
-  }
+    "ecmaVersion": 2018,
+    "sourceType": "module"
+  },
+  "extends": ["airbnb", "plugin:react/recommended"],
+  "plugins": ["react"],
+  "rules": {
+    "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
+    "react/react-in-jsx-scope": "off",
+    "import/no-unresolved": "off",
+    "no-shadow": "off",
+    "arrow-parens": ["error", "as-needed"]
+  },
+  "ignorePatterns": ["dist/", "build/"]
 }
