--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/core": "^7.14.0",
     "@babel/eslint-parser": "^7.13.14",
     "@babel/preset-env": "^7.14.1",
+    "@babel/preset-react": "^7.13.13",
     "@frontendmasters/pet": "^1.0.3",
     "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^5.11.4",
