--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@babel/preset-env": "^7.14.1",
     "@babel/preset-react": "^7.13.13",
     "@frontendmasters/pet": "^1.0.3",
+    "@petfinder/petfinder-js": "^1.0.6",
     "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "babel-eslint": "^10.1.0",
     "node-sass": "^5.0.0",
+    "petfinder-client": "^1.0.2",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
